<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/layout_margin">

        <TextView
            style="@style/TitleStyle"
            android:text="@string/lblRestpassword"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/txtID"></TextView>

        <EditText
            android:id="@+id/edtID"
            android:layout_width="@dimen/width_0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:hint="@string/hintID"></EditText>
    </LinearLayout>
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <RadioButton
            android:id="@+id/radAmin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/txtAdmin" />

        <RadioButton
            android:id="@+id/radPhongDaoTao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/txtPDT" />

        <RadioButton
            android:id="@+id/radGiangVien"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtGV" />

        <RadioButton
            android:id="@+id/radSinhVien"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtSV" />
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnReset" />
    </LinearLayout>
</LinearLayout>