<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".phongdaotao.QuanLyActivity">

    <LinearLayout
        style="@style/TitleLayout">

        <TextView
            android:text="@string/txtQuanLy"
            style="@style/TitleStyle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:layout_margin="@dimen/layout_margin"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnKhoa"
            style="@style/QuanLyButton"
            android:text="@string/btnKhoa"/>

        <Button
            android:id="@+id/btnGiangVien"
            style="@style/QuanLyButton"
            android:text="@string/btnGiangVien"/>

        <Button
            android:id="@+id/btnSinhVien"
            style="@style/QuanLyButton"
            android:text="@string/btnSinhVien"/>

    </LinearLayout>

</LinearLayout>