<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".activities.DanhSachGiangVienActivity">

    <LinearLayout
        style="@style/TitleLayout">

        <TextView
            android:text="@string/txtDanhSachGV"
            style="@style/TitleStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/mucMaGV"
            android:gravity="center"
            style="@style/TextViewIdEven"
            android:textColor="@color/textColorItemRecyclerViewEven" />

        <TextView
            android:text="@string/mucTenGV"
            style="@style/TextViewTenEven" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:layout_margin="@dimen/layout_margin"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_teacher_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="No Records"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>