<?xml version="1.0" encoding="utf-8"?>

<com.daimajia.swipe.SwipeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:swipe="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipe_dssv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    swipe:leftEdgeSwipeOffset="0dp"
    swipe:rightEdgeSwipeOffset="0dp">
    <LinearLayout
        android:id="@+id/right_wrapper"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:paddingTop="50px">
        <TextView
            android:id="@+id/edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#0776a5"
            android:text="@string/btnEdit"
            android:clickable="true">

        </TextView>

        <ImageButton
            android:id="@+id/ibtnDelete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#003c54"
            android:src="@drawable/ic_delete_white_24dp">

        </ImageButton>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:elevation="5dp"
        android:layout_marginTop="50px"
        android:paddingTop="50px">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/txtMaSV"
                android:id="@+id/txtMaSV"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/txtTenSV"
                android:id="@+id/txtTenSV"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/txtDiemSV"
                android:id="@+id/txtDiemSV"></TextView>
        </LinearLayout>
    </LinearLayout>
</com.daimajia.swipe.SwipeLayout>