<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".activities.DanhSachMonHocActivity">
    <LinearLayout
        style="@style/TitleLayout">

        <TextView
            style="@style/TitleStyle"
            android:text="@string/dsMH" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:orientation="horizontal"
        android:padding="@dimen/paddingLeftLayout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/marginLeftLayout"
            android:layout_weight="1"
            android:text="@string/ma"
            android:textColor="@color/textColorItemRecyclerViewEven"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/marginLeftLayout"
            android:layout_weight="4"
            android:text="@string/ten"
            android:textColor="@color/textColorItemRecyclerViewEven"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/marginLeftLayout"
            android:layout_weight="0.5"
            android:text="@string/tinChi"
            android:textColor="@color/textColorItemRecyclerViewEven" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/marginLeftLayout"
            android:layout_weight="1"
            android:text="@string/ma"
            android:textColor="@color/textColorItemRecyclerViewEven"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:layout_margin="@dimen/layout_margin"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDSMonHoc"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="No Records"
            android:visibility="gone" />

    </LinearLayout>
</LinearLayout>